# the-lost-kiwi

./: CMakeLists.txt  theLostKiwi-Design.mdj
assets/: castle.txt  cemiterio.txt
include/: Enemy.h  Ente.h  Entity.h  EntityList.h  Game.h  List.h  Stage.h  Thread.h
include/Entities/: Archer.h  Block.h  Character.h  Dracula.h  DraculaThread.h  Enemy.h  Entity.h  Fire.h  Obstacle.h  Platform.h  Player.h  Projectile.h  Spike.h  Warrior.h
include/List/: Element.h  List.h
include/Managers/: EventManager.h  GraphicManager.h  GraphicsManager.h
include/Stages/: Castle.h  EnemySpawner.h  EntityList.h  Graveyard.h  PhysicsEngine.h  PhysicsMachine.h  Spawner.h  Stage.h
include/States/: ChoosePlayerState.h  ChooseStageState.h  GameOverState.h  GameStateMachine.h  MainMenuState.h  PauseState.h  PlayState.h  ScoreboardState.h  State.h  StateMachine.h
saves/: scoreboard.txt  stage.txt
src/: Character.cpp  Element.h  Enemy.cpp  Ente.cpp  Entity.cpp  Entity.h  EntityList.cpp  Game.cpp  Game.h  List.cpp  List.h  Player.cpp  Player.h  Stage.cpp  Thread.cpp  main.cpp
src/Entities/: Archer.cpp  Block.cpp  Character.cpp  Dracula.cpp  DraculaThread.cpp  Enemy.cpp  Entity.cpp  Fire.cpp  Obstacle.cpp  Platform.cpp  Player.cpp  Projectile.cpp  Spike.cpp  Warrior.cpp
src/Managers/: EventManager.cpp  GraphicManager.cpp  GraphicsManager.cpp
src/Stages/: Castle.cpp  EnemySpawner.cpp  EntityList.cpp  Graveyard.cpp  PhysicsEngine.cpp  PhysicsMachine.cpp  Spawner.cpp  Stage.cpp
src/States/: ChoosePlayerState.cpp  ChooseStageState.cpp  GameOverState.cpp  GameStateMachine.cpp  MainMenuState.cpp  PauseState.cpp  PlayState.cpp  ScoreboardState.cpp  State.cpp  StateMachine.cpp
uml/: theLostKiwi-Design-posReuniao1.mdj  theLostKiwi-Design.mdj
